added today doptask

--- a/w9d1/package.json
+++ b/w9d1/package.json
@@ -10,7 +10,7 @@
     "gulp-rigger": "^0.5.8"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp start"
   },
   "keywords": [],
   "author": "",
