added jscss files

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "[homework](https://yakimovalexender.github.io/BootCamp10_Alexender/w0d1/index.html)",
   "main": "index.js",
   "dependencies": {
-    "gulp": "^4.0.0"
+    "gulp": "^4.0.0",
+    "redux": "file:redux/redux"
   },
   "devDependencies": {},
   "scripts": {
